# YNAB_MonthEnd

./: README.md  pyproject.toml  ynab-monthend-config.toml
ynab-monthend/: LICENSE.txt  README.md  pyproject.toml
ynab-monthend/src/ynab_monthend/: __about__.py  __init__.py  utils.py
